# sleeper

./: QB_2023_proj.csv  README.md  README.txt  all_players_2024.csv  all_players_2024_w_projections.csv  draft_results.py  plan.txt  player_stats.py  total_draft_points.csv  total_draft_points2.csv
archive/: all_players_2024.csv  all_players_2024_w_projections.csv  main.py  selenium_test.py  total_draft_points_2022.csv
sleeper-draft-tool/: README.md  pyproject.toml  requirements.txt
sleeper-draft-tool/docs/: design.md
sleeper-draft-tool/src/sleeper_draft_tool/: __init__.py  cli.py  config.py  draft_state.py  fetchers.py  gui.py  models.py  scoring.py  utils.py  value.py
sleeper-draft-tool/tests/: test_draft_state.py  test_fetchers.py  test_value.py
