[tool.poetry]
name = "sleeper-draft-tool"
version = "0.1.0"
description = "A fantasy football draft tool that provides real-time data on available players and their projected values."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
tkinter = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"